--- a/index.css
+++ b/index.css
@@ -18,12 +18,12 @@ body {
   height: 35px;
 }
 .dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
+  color: black;
+  background-color: white;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  padding:8px;
 }
 
 .dropdown {
@@ -35,7 +35,7 @@ body {
   display: none;
   position: absolute;
   right: 0;
-  background-color: #f9f9f9;
+  background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -48,9 +48,9 @@ body {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {background-color: #6d6d6d;}
 .dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #6b6b6b;}
 
 /* -------------------------------------------------------------- */
 
