--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 .login-container > button {
-  background-color: #4CAF50;
+  background-color: rgb(86, 130, 211);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -143,37 +143,26 @@ input[type=text], input[type=password] {
   background-color: #f44336;
 }
 
-/* Center the image and position the close button */
-.imgcontainer {
+/* Position the close button */
+.closecontainer {
   text-align: center;
   margin: 24px 0 12px 0;
   position: relative;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
 }
 
 .login-container {
   padding: 16px;
 }
 
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* The Modal (background) */
-.modal {
+.modal {  /* The Modal (background) */
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   padding-top: 60px;
@@ -184,7 +173,8 @@ span.psw {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
+  height: 40%;
 }
 
 /* The Close Button (x) */
@@ -219,14 +209,4 @@ span.psw {
   to {transform: scale(1)}
 }
 
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
 /* -------------------------------------------------------------- */
