--- a/index.css
+++ b/index.css
@@ -112,32 +112,7 @@ p {
 
 /* -------------------------------------------------------------- */
 
-/* ------------- Login Modal ------------------------------------ */
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-.login-container > button {
-  background-color: rgb(86, 130, 211);
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-.login-container > button:hover {
-  opacity: 0.8;
-}
+/* ----------------- Default Modal Content -----------------------*/ 
 
 /* Extra styles for the cancel button */
 .cancelbtn {
@@ -151,10 +126,6 @@ input[type=text], input[type=password] {
   text-align: center;
   margin: 24px 0 12px 0;
   position: relative;
-}
-
-.login-container {
-  padding: 16px;
 }
 
 .modal {  /* The Modal (background) */
@@ -210,6 +181,79 @@ input[type=text], input[type=password] {
 @keyframes animatezoom {
   from {transform: scale(0)} 
   to {transform: scale(1)}
+}
+
+/* ---------------------------------------------------------------*/
+
+/* ------------- Login Modal ------------------------------------ */
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.login-container > button {
+  background-color: rgb(86, 130, 211);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.login-container > button:hover {
+  opacity: 0.8;
+}
+
+.login-container {
+  padding: 16px;
+}
+
+/* -------------------------------------------------------------- */
+
+/* -------------------- Info Modal Box -------------------------- */
+
+/* Set a style for all buttons */
+.info-container > button {
+  background-color: rgb(86, 130, 211);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.info-container > button:hover {
+  opacity: 0.8;
+}
+
+
+.info-container {
+  padding: 16px;
+}
+
+.info-container > p{
+  text-align: center;
+  margin: 40px 0;
+}
+
+/* Set a style for all buttons */
+.info-container > button {
+  background-color: rgb(136, 136, 136);
+  color: white;
+  padding: 14px 20px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
 
 /* -------------------------------------------------------------- */
