Add Userinfo Modal

--- a/index.css
+++ b/index.css
@@ -248,7 +248,46 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 .info-container > button {
-  background-color: rgb(136, 136, 136);
+  background-color: rgb(86, 130, 211);
+  color: white;
+  padding: 14px 20px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+/* -------------------------------------------------------------- */
+
+/* -------------------- Info Modal Box -------------------------- */
+
+/* Set a style for all buttons */
+.user-info-container > button {
+  background-color: rgb(86, 130, 211);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.user-info-container > button:hover {
+  opacity: 0.8;
+}
+
+.user-info-container {
+  padding: 16px;
+}
+
+.user-info-container > p{
+  text-align: center;
+  margin: 40px 0;
+}
+
+/* Set a style for all buttons */
+.user-info-container > button {
+  background-color: rgb(86, 130, 211);
   color: white;
   padding: 14px 20px;
   margin: 10px 0;
